FAQページ追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
 <body>
     <header>
         <h1>PDFタイトル編集</h1>
+
+        <!-- よくあるご質問リンク -->
+        <div class="faq">
+            <a href="/faq" target="_blank" title="よくあるご質問">
+              ？ よくあるご質問
+            </a>
+          </div>
     </header>
     <main>
         <section class="instraction">
