--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,18 @@
 /* 追加のカスタムスタイル */
-.instraction p.note { border: 1px solid #003894; padding: 10px; }
-.tab { transition: transform 0.3s; }
-.tab:hover { transform: scale(1.05); }
-.prefix-field.is-hidden, .suffix-field.is-hidden { display: none; }
+.instraction p.note {
+    border: 1px solid #003894;
+    padding: 10px;
+}
+
+.tab {
+    transition: transform 0.3s;
+}
+
+.tab:hover {
+    transform: scale(1.05);
+}
+
+.prefix-field.is-hidden,
+.suffix-field.is-hidden {
+    display: none;
+}
