注意書き、文言修正、改行修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,8 @@
                     <p class="text">タイトルを修正したPDFを<br>ダウンロード</p>
                 </li>
             </ul>
-            <p class="note">※1ファイルのサイズ上限は10MB、最大20ファイルまでアップロード可能です。</p>
+            <p class="note">※1ファイルのサイズ上限は10MB、最大20ファイルまでアップロード可能です。<br>
+            ※ファイルの数や容量によってはダウンロードの画面が表示されるまで数秒〜30秒程度かかることがあります。</p>
         </section>
         <section class="tab-container">
             <div class="tabs">
