注意書き追加、タブデザイン修正

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -8,9 +8,9 @@
     transition: transform 0.3s;
 }
 
-.tab:hover {
+/* .tab:hover {
     transform: scale(1.05);
-}
+} */
 
 .prefix-field.is-hidden,
 .suffix-field.is-hidden {
