--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <title>PDFメタデータ編集アプリ</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/custom.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <script src="/static/js/script.js" defer></script>
 </head>
 <body>
